--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -105,7 +105,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="FqI-4F-rWv">
-                                <rect key="frame" x="0.0" y="174" width="320" height="394"/>
+                                <rect key="frame" x="0.0" y="104" width="320" height="464"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
@@ -121,69 +121,87 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g5i-o9-bZY">
-                                <rect key="frame" x="0.0" y="64" width="320" height="110"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remind" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fio-xH-vIc">
-                                        <rect key="frame" x="10" y="15" width="67" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGc-PH-zNC">
-                                        <rect key="frame" x="10" y="61" width="81" height="24"/>
+                                        <rect key="frame" x="10" y="8" width="67" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="AnQ-xL-00j">
-                                        <rect key="frame" x="261" y="15" width="51" height="31"/>
+                                        <rect key="frame" x="261" y="4.5" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="onOf" destination="P6n-J6-B55" eventType="valueChanged" id="uE3-2q-3V0"/>
+                                        </connections>
                                     </switch>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXw-4D-zYC">
-                                        <rect key="frame" x="270" y="55" width="40" height="30"/>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="AnQ-xL-00j" secondAttribute="trailing" constant="10" id="097-Np-QdH"/>
+                                    <constraint firstItem="AnQ-xL-00j" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fio-xH-vIc" secondAttribute="trailing" constant="100" id="99f-CR-Ymb"/>
+                                    <constraint firstItem="fio-xH-vIc" firstAttribute="centerY" secondItem="g5i-o9-bZY" secondAttribute="centerY" id="Jia-cb-KPm"/>
+                                    <constraint firstAttribute="height" constant="40" id="jec-Zr-Hqc"/>
+                                    <constraint firstItem="fio-xH-vIc" firstAttribute="leading" secondItem="g5i-o9-bZY" secondAttribute="leading" constant="10" id="oDj-Qm-Cea"/>
+                                    <constraint firstItem="AnQ-xL-00j" firstAttribute="centerY" secondItem="g5i-o9-bZY" secondAttribute="centerY" id="p1O-Kl-FDr"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jys-5c-cEk" userLabel="DateView">
+                                <rect key="frame" x="0.0" y="104" width="320" height="0.0"/>
+                                <subviews>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGc-PH-zNC">
+                                        <rect key="frame" x="10" y="-12" width="86.5" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YfB-Qx-BgJ">
+                                        <rect key="frame" x="190" y="-10.5" width="80" height="21"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="h3K-Lj-XEQ"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="LYT-eb-WLS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXw-4D-zYC">
+                                        <rect key="frame" x="280" y="-15" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="C6j-Me-o7b"/>
                                         </constraints>
                                         <state key="normal" title="Set"/>
                                         <connections>
                                             <action selector="showDatePicker" destination="P6n-J6-B55" eventType="touchUpInside" id="1dz-cC-VEM"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YfB-Qx-BgJ">
-                                        <rect key="frame" x="96" y="64" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="zXw-4D-zYC" secondAttribute="bottom" constant="25" id="8xO-hI-rcr"/>
-                                    <constraint firstItem="fio-xH-vIc" firstAttribute="leading" secondItem="g5i-o9-bZY" secondAttribute="leading" constant="10" id="IvJ-tI-sq8"/>
-                                    <constraint firstItem="AnQ-xL-00j" firstAttribute="top" secondItem="g5i-o9-bZY" secondAttribute="top" constant="15" id="KCY-lf-7x3"/>
-                                    <constraint firstAttribute="bottom" secondItem="DGc-PH-zNC" secondAttribute="bottom" constant="25" id="Oez-MS-MPL"/>
-                                    <constraint firstAttribute="height" constant="110" id="cJe-YP-hR2"/>
-                                    <constraint firstItem="fio-xH-vIc" firstAttribute="top" secondItem="g5i-o9-bZY" secondAttribute="top" constant="15" id="e0I-7x-sO7"/>
-                                    <constraint firstItem="DGc-PH-zNC" firstAttribute="leading" secondItem="g5i-o9-bZY" secondAttribute="leading" constant="10" id="fr0-qN-fox"/>
-                                    <constraint firstAttribute="bottom" secondItem="YfB-Qx-BgJ" secondAttribute="bottom" constant="25" id="hmJ-8w-lRJ"/>
-                                    <constraint firstItem="zXw-4D-zYC" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="YfB-Qx-BgJ" secondAttribute="trailing" constant="10" id="mAJ-LT-sEC"/>
-                                    <constraint firstAttribute="trailing" secondItem="AnQ-xL-00j" secondAttribute="trailing" constant="10" id="taF-bw-5l9"/>
-                                    <constraint firstItem="YfB-Qx-BgJ" firstAttribute="leading" secondItem="DGc-PH-zNC" secondAttribute="trailing" constant="5" id="yP3-KZ-oRF"/>
-                                    <constraint firstAttribute="trailing" secondItem="zXw-4D-zYC" secondAttribute="trailing" constant="10" id="zhu-1p-yO1"/>
+                                    <constraint firstItem="YfB-Qx-BgJ" firstAttribute="centerY" secondItem="Jys-5c-cEk" secondAttribute="centerY" id="3YW-HG-mTe"/>
+                                    <constraint firstAttribute="trailing" secondItem="zXw-4D-zYC" secondAttribute="trailing" constant="10" id="BL6-JT-ArC"/>
+                                    <constraint firstAttribute="height" id="a4y-dC-oxm"/>
+                                    <constraint firstItem="zXw-4D-zYC" firstAttribute="centerY" secondItem="Jys-5c-cEk" secondAttribute="centerY" id="aCf-Wx-oen"/>
+                                    <constraint firstItem="DGc-PH-zNC" firstAttribute="centerY" secondItem="Jys-5c-cEk" secondAttribute="centerY" id="eDK-rw-8Ls"/>
+                                    <constraint firstItem="zXw-4D-zYC" firstAttribute="leading" secondItem="YfB-Qx-BgJ" secondAttribute="trailing" constant="10" id="gf8-xW-CC4"/>
+                                    <constraint firstItem="DGc-PH-zNC" firstAttribute="leading" secondItem="Jys-5c-cEk" secondAttribute="leading" constant="10" id="noJ-WX-aI9"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="t1b-FU-oCf" firstAttribute="trailing" secondItem="g5i-o9-bZY" secondAttribute="trailing" id="7tP-8a-Saa"/>
-                            <constraint firstItem="g5i-o9-bZY" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="Bth-ye-PO7"/>
+                            <constraint firstItem="Jys-5c-cEk" firstAttribute="top" secondItem="g5i-o9-bZY" secondAttribute="bottom" id="4Lj-dw-fvw"/>
+                            <constraint firstItem="g5i-o9-bZY" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="5sS-M9-jnR"/>
                             <constraint firstItem="Q1a-jK-e17" firstAttribute="top" secondItem="FqI-4F-rWv" secondAttribute="bottom" id="Ear-6F-pdR"/>
                             <constraint firstItem="Q1a-jK-e17" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="EfK-Uu-aDy"/>
-                            <constraint firstItem="FqI-4F-rWv" firstAttribute="top" secondItem="g5i-o9-bZY" secondAttribute="bottom" id="JyH-11-Kqp"/>
-                            <constraint firstItem="FqI-4F-rWv" firstAttribute="trailing" secondItem="t1b-FU-oCf" secondAttribute="trailing" id="Os3-Nr-daM"/>
+                            <constraint firstItem="FqI-4F-rWv" firstAttribute="trailing" secondItem="t1b-FU-oCf" secondAttribute="trailing" id="Exj-OT-2A0"/>
+                            <constraint firstItem="g5i-o9-bZY" firstAttribute="trailing" secondItem="t1b-FU-oCf" secondAttribute="trailing" id="Pwf-C1-BNK"/>
                             <constraint firstItem="t1b-FU-oCf" firstAttribute="trailing" secondItem="Q1a-jK-e17" secondAttribute="trailing" id="XbH-Jh-BSZ"/>
                             <constraint firstItem="t1b-FU-oCf" firstAttribute="bottom" secondItem="Q1a-jK-e17" secondAttribute="bottom" id="cfn-VU-fex"/>
-                            <constraint firstItem="FqI-4F-rWv" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="kfu-2s-fBj"/>
-                            <constraint firstItem="g5i-o9-bZY" firstAttribute="top" secondItem="t1b-FU-oCf" secondAttribute="top" id="oys-Ft-N9e"/>
+                            <constraint firstItem="g5i-o9-bZY" firstAttribute="top" secondItem="t1b-FU-oCf" secondAttribute="top" id="dF4-ek-DyR"/>
+                            <constraint firstItem="FqI-4F-rWv" firstAttribute="top" secondItem="Jys-5c-cEk" secondAttribute="bottom" id="g0I-0k-bq9"/>
+                            <constraint firstItem="FqI-4F-rWv" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="mht-i9-7kP"/>
+                            <constraint firstItem="Jys-5c-cEk" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="rYz-ds-oVR"/>
+                            <constraint firstItem="Jys-5c-cEk" firstAttribute="trailing" secondItem="t1b-FU-oCf" secondAttribute="trailing" id="tG4-13-dJP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="t1b-FU-oCf"/>
                     </view>
@@ -200,8 +218,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="DateViewHeight" destination="a4y-dC-oxm" id="ecT-7k-T3P"/>
+                        <outlet property="dateLabel" destination="DGc-PH-zNC" id="MFU-wb-edU"/>
                         <outlet property="doneBarButton" destination="Xun-gD-7mp" id="FUI-V7-XDg"/>
                         <outlet property="dueDateLabel" destination="YfB-Qx-BgJ" id="KW0-zA-14Y"/>
+                        <outlet property="setDateButton" destination="zXw-4D-zYC" id="TFp-na-nlK"/>
                         <outlet property="shouldRemindSwitch" destination="AnQ-xL-00j" id="krt-IS-k5e"/>
                         <outlet property="textView" destination="FqI-4F-rWv" id="I9U-zh-S2K"/>
                         <outlet property="viewHeight" destination="Phk-Mj-PBz" id="bWw-op-GMC"/>
@@ -275,6 +296,6 @@
         <image name="Uncheck" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Aup-uW-lsk"/>
+        <segue reference="4kG-fz-Vnb"/>
     </inferredMetricsTieBreakers>
 </document>
