--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -256,43 +256,51 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JfK-Ce-JJC">
-                                <rect key="frame" x="10" y="258" width="300" height="300"/>
+                                <rect key="frame" x="10" y="258" width="320" height="300"/>
                                 <subviews>
-                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="w7z-mQ-ILy">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="216"/>
-                                        <date key="date" timeIntervalSinceReferenceDate="575908444.07147098">
-                                            <!--2019-04-02 14:34:04 +0000-->
-                                        </date>
-                                    </datePicker>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NKV-22-KiT">
-                                        <rect key="frame" x="126" y="266" width="48" height="30"/>
-                                        <state key="normal" title="Cancel"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NKV-22-KiT" customClass="ButtonWithBorder" customModule="ToDoList" customModuleProvider="target">
+                                        <rect key="frame" x="160" y="267" width="160" height="33"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <state key="normal" title="CANCEL"/>
                                         <connections>
                                             <action selector="Cancel:" destination="a1t-Qu-dNA" eventType="touchUpInside" id="y1g-PF-7Ff"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ouv-rb-em3">
-                                        <rect key="frame" x="135" y="226" width="30" height="30"/>
-                                        <state key="normal" title="Ok"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ouv-rb-em3" customClass="ButtonWithBorder" customModule="ToDoList" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="267" width="160" height="33"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <state key="normal" title="OK"/>
                                         <connections>
                                             <action selector="ok:" destination="a1t-Qu-dNA" eventType="touchUpInside" id="ifX-Ie-LbX"/>
                                         </connections>
                                     </button>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="w7z-mQ-ILy">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="267"/>
+                                        <date key="date" timeIntervalSinceReferenceDate="575908444.07147098">
+                                            <!--2019-04-02 14:34:04 +0000-->
+                                        </date>
+                                    </datePicker>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="ouv-rb-em3" firstAttribute="top" secondItem="w7z-mQ-ILy" secondAttribute="bottom" constant="10" id="0xN-U4-lNH"/>
-                                    <constraint firstItem="ouv-rb-em3" firstAttribute="centerX" secondItem="JfK-Ce-JJC" secondAttribute="centerX" id="1O8-JE-xQu"/>
                                     <constraint firstAttribute="height" constant="300" id="B8i-hO-cJ8"/>
                                     <constraint firstAttribute="trailing" secondItem="w7z-mQ-ILy" secondAttribute="trailing" id="D4d-4a-UoN"/>
+                                    <constraint firstItem="ouv-rb-em3" firstAttribute="width" secondItem="JfK-Ce-JJC" secondAttribute="width" multiplier="0.5" id="Eqn-cJ-QzC"/>
+                                    <constraint firstItem="ouv-rb-em3" firstAttribute="leading" secondItem="JfK-Ce-JJC" secondAttribute="leading" id="IFh-e6-b7p"/>
                                     <constraint firstItem="w7z-mQ-ILy" firstAttribute="top" secondItem="JfK-Ce-JJC" secondAttribute="top" id="K7A-AW-mRh"/>
-                                    <constraint firstItem="NKV-22-KiT" firstAttribute="centerX" secondItem="JfK-Ce-JJC" secondAttribute="centerX" id="NW5-qa-jK7"/>
+                                    <constraint firstItem="NKV-22-KiT" firstAttribute="width" secondItem="JfK-Ce-JJC" secondAttribute="width" multiplier="0.5" id="LLL-Iy-gbK"/>
                                     <constraint firstItem="w7z-mQ-ILy" firstAttribute="leading" secondItem="JfK-Ce-JJC" secondAttribute="leading" id="SJw-Kw-hZq"/>
-                                    <constraint firstItem="NKV-22-KiT" firstAttribute="top" secondItem="ouv-rb-em3" secondAttribute="bottom" constant="10" id="mGI-yQ-fLG"/>
+                                    <constraint firstItem="NKV-22-KiT" firstAttribute="leading" secondItem="ouv-rb-em3" secondAttribute="trailing" id="WTi-f4-HQx"/>
+                                    <constraint firstAttribute="trailing" secondItem="NKV-22-KiT" secondAttribute="trailing" id="X5n-i5-DQC"/>
+                                    <constraint firstAttribute="bottom" secondItem="NKV-22-KiT" secondAttribute="bottom" id="eeg-7q-KJ1"/>
+                                    <constraint firstItem="NKV-22-KiT" firstAttribute="top" secondItem="w7z-mQ-ILy" secondAttribute="bottom" id="ewX-nH-Jpr"/>
+                                    <constraint firstAttribute="trailing" secondItem="ouv-rb-em3" secondAttribute="trailing" id="j1y-lK-ToS"/>
+                                    <constraint firstItem="ouv-rb-em3" firstAttribute="top" secondItem="w7z-mQ-ILy" secondAttribute="bottom" id="nLe-A8-sIA"/>
+                                    <constraint firstAttribute="bottom" secondItem="ouv-rb-em3" secondAttribute="bottom" id="pPP-S0-9dY"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.1953392551369863" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="JfK-Ce-JJC" firstAttribute="leading" secondItem="emj-NJ-hVo" secondAttribute="leading" constant="10" id="NA9-rL-A5I"/>
                             <constraint firstItem="emj-NJ-hVo" firstAttribute="bottom" secondItem="JfK-Ce-JJC" secondAttribute="bottom" constant="10" id="YtQ-fN-Sx8"/>
@@ -302,6 +310,7 @@
                     </view>
                     <connections>
                         <outlet property="datePicker" destination="w7z-mQ-ILy" id="ENA-EF-nnY"/>
+                        <outlet property="datePickerView" destination="JfK-Ce-JJC" id="VV5-yC-sYC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jim-8h-4ve" userLabel="First Responder" sceneMemberID="firstResponder"/>
