--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -105,7 +105,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="FqI-4F-rWv">
-                                <rect key="frame" x="0.0" y="104" width="320" height="464"/>
+                                <rect key="frame" x="0.0" y="114" width="320" height="454"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
@@ -121,7 +121,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g5i-o9-bZY">
-                                <rect key="frame" x="0.0" y="64" width="320" height="40"/>
+                                <rect key="frame" x="0.0" y="74" width="320" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remind" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fio-xH-vIc">
                                         <rect key="frame" x="10" y="8" width="67" height="24"/>
@@ -147,7 +147,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jys-5c-cEk" userLabel="DateView">
-                                <rect key="frame" x="0.0" y="104" width="320" height="0.0"/>
+                                <rect key="frame" x="0.0" y="114" width="320" height="0.0"/>
                                 <subviews>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGc-PH-zNC">
                                         <rect key="frame" x="10" y="-12" width="86.5" height="24"/>
@@ -164,10 +164,11 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXw-4D-zYC">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXw-4D-zYC" customClass="MaterialButton" customModule="ToDoList" customModuleProvider="target">
                                         <rect key="frame" x="280" y="-15" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="C6j-Me-o7b"/>
+                                            <constraint firstAttribute="height" constant="30" id="vWz-Pb-4g4"/>
                                         </constraints>
                                         <state key="normal" title="Set"/>
                                         <connections>
@@ -197,7 +198,7 @@
                             <constraint firstItem="g5i-o9-bZY" firstAttribute="trailing" secondItem="t1b-FU-oCf" secondAttribute="trailing" id="Pwf-C1-BNK"/>
                             <constraint firstItem="t1b-FU-oCf" firstAttribute="trailing" secondItem="Q1a-jK-e17" secondAttribute="trailing" id="XbH-Jh-BSZ"/>
                             <constraint firstItem="t1b-FU-oCf" firstAttribute="bottom" secondItem="Q1a-jK-e17" secondAttribute="bottom" id="cfn-VU-fex"/>
-                            <constraint firstItem="g5i-o9-bZY" firstAttribute="top" secondItem="t1b-FU-oCf" secondAttribute="top" id="dF4-ek-DyR"/>
+                            <constraint firstItem="g5i-o9-bZY" firstAttribute="top" secondItem="t1b-FU-oCf" secondAttribute="top" constant="10" id="dF4-ek-DyR"/>
                             <constraint firstItem="FqI-4F-rWv" firstAttribute="top" secondItem="Jys-5c-cEk" secondAttribute="bottom" id="g0I-0k-bq9"/>
                             <constraint firstItem="FqI-4F-rWv" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="mht-i9-7kP"/>
                             <constraint firstItem="Jys-5c-cEk" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="rYz-ds-oVR"/>
@@ -221,9 +222,8 @@
                         <outlet property="DateViewHeight" destination="a4y-dC-oxm" id="ecT-7k-T3P"/>
                         <outlet property="dateLabel" destination="DGc-PH-zNC" id="MFU-wb-edU"/>
                         <outlet property="dateView" destination="Jys-5c-cEk" id="Wu5-sJ-0yl"/>
-                        <outlet property="doneBarButton" destination="Xun-gD-7mp" id="FUI-V7-XDg"/>
                         <outlet property="dueDateLabel" destination="YfB-Qx-BgJ" id="KW0-zA-14Y"/>
-                        <outlet property="setDateButton" destination="zXw-4D-zYC" id="TFp-na-nlK"/>
+                        <outlet property="setDateButton" destination="zXw-4D-zYC" id="GJU-20-khO"/>
                         <outlet property="shouldRemindSwitch" destination="AnQ-xL-00j" id="krt-IS-k5e"/>
                         <outlet property="textView" destination="FqI-4F-rWv" id="I9U-zh-S2K"/>
                         <outlet property="viewHeight" destination="Phk-Mj-PBz" id="bWw-op-GMC"/>
